recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:11: error: not found: value size
	if(size-n<0) n=size;
           ^nlast:11: error: reassignment to val
	if(size-n<0) n=size;
                      ^