recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
	def fonctionInterne(l:List[Int],n:Int):List[Int]={
		if(l==Nil){
			return Nil;
		}else if(n==0){
			return l.head :: fonctionInterne(l.tail,0);
		}else{
			return fonctionInterne(l.tail,n-1);
		}
	}
	if(size-n<0) n=size;
	return fonctionInterne(l,l.size-n);
}
